@@ -1,3 +1,7 @@
+2016-04-25  Ben Elliston  <bje@gnu.org>
+
+	* testsuite/runtest.all/utils.test: Remove unsetenv test.
+
 2016-04-24  Ben Elliston  <bje@gnu.org>
 
 	* lib/utils.exp (unsetenv): Remove proc.
